file upload - file download finish

--- a/src/main/webapp/advise_show.html
+++ b/src/main/webapp/advise_show.html
@@ -35,6 +35,7 @@
                                 <td>หมวด</td>
                                 <td>ชื่อเรื่อง</td>
                                 <td>รายละเอียดคำปรึกษา</td>
+                                <td>download</td>
                             </tr>
                         </thead>
                         <tbody>
@@ -64,6 +65,11 @@
                                             </div>
                                         </div>
                                     </div>
+                                </td>
+                                <td>
+                                    <button ng-click="dowloads(advi)">
+                                        <span class="mdi-file-file-download"></span>
+                                    </button>
                                 </td>
                             </tr>
                         </tbody>
