--- a/src/main/webapp/behavior_show.html
+++ b/src/main/webapp/behavior_show.html
@@ -60,7 +60,7 @@
                             </div>
                         </td>
                         <td>
-                            <button>
+                            <button ng-click="dowloads(beha)">
                                 <span class="mdi-file-file-download"></span>
                             </button>
                         </td>
