--- a/src/main/webapp/admin_add_information.html
+++ b/src/main/webapp/admin_add_information.html
@@ -47,8 +47,7 @@
             <div class="form-group">
                 <label for="inputFile" class="col-lg-2 control-label">File</label>
                 <div class="col-lg-10">
-                    <input type="text" id="input-picture" readonly="" class="form-control floating-label" placeholder="Browse...">
-                    <input type="file" id="input-picture">
+                    <input type="file" class="form-control" file-model="file" custom-on-change ="saveFile">
                 </div>
             </div>
             <div class="form-group">
@@ -106,8 +105,8 @@
                     <tbody>
                         <tr ng-repeat="infor in informationshow.content">                      
                             <td>{{infor.startTime}}</td>
-                            <td>{{infor.title}}</td>
-                            <td>{{infor.file}}</td>
+                            <td>{{infor.title}}</td>                         
+                            <td>{{infor.fileUpload.name}}</td>
                             <td>{{infor.pageBrief}}</td>
                             <td>{{infor.description}}</td>
                             <td>{{infor.linkWeb}}</td>
