--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -49,6 +49,11 @@
                     </div>
                     </p>
                     <p style="font-size: small"><a href="{{news.linkWeb}}">{{news.linkWeb}}</a></p>
+                    <p>
+                        <button ng-click="dowloads(news)">
+                            <span class="mdi-file-file-download"></span>
+                        </button>
+                    </p>
                 </div>
             </div>
 
