show teacher page student

--- a/src/main/webapp/index-template.html
+++ b/src/main/webapp/index-template.html
@@ -99,7 +99,7 @@
                             <a href="#/behavior" class="btn btn-primary">ข้อมูลความประพฤติ</a>
                             <a href="#/appointment" class="btn btn-primary">ข้อมูลการนัดหมาย</a>
                             <a href="#/course" class="btn btn-primary">หลักสูตรสาขา</a>
-                            <a href="#/course_subject_show" class="btn btn-primary">แผนการเรียน</a>
+                            <a href="#/course_subject_show_1" class="btn btn-primary">แผนการเรียน</a>
                             <a href="#/timetable" class="btn btn-primary">ตารางเรียน/สอน</a>
                         </div>
                     </div>
