--- a/src/main/webapp/student_show.html
+++ b/src/main/webapp/student_show.html
@@ -10,66 +10,57 @@
                                 <h3 class="panel-title">Student : </h3>
                             </div>
                             <div class="panel-body">
-                                
                                 <div class="form-group">
+                                    <label for="inputTeacher" class="col-lg-2 control-label">อาจารย์ที่ปรึกษา</label>
                                     <div class="col-lg-10">
-                                        <div class="row-picture">
-                                            <img class="circle" src="http://lorempixel.com/56/56/people/1" alt="icon">
-                                        </div>
+                                        <input type="text" class="form-control" id="inputTeacher" placeholder="Teacher" ng-model="account.teacher.name">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="inputEmail" class="col-lg-2 control-label">Email</label>
                                     <div class="col-lg-10">
-                                        <input type="email" class="form-control" id="inputEmail" placeholder="Email" ng-model="student.email">
+                                        <input type="email" class="form-control" id="inputEmail" placeholder="Email" ng-model="account.email">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="inputPassword" class="col-lg-2 control-label">Password</label>
                                     <div class="col-lg-10">
-                                        <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="student.password">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="inputFile" class="col-lg-2 control-label">File</label>
-                                    <div class="col-lg-10">
-                                        <input type="file" id="input-picture">
-                                        <img src="image/very-basic-picture-icon.png" width="70" height="70" id="picture" ng-model="filePic">
+                                        <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="account.password">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="text" class="col-lg-2 control-label">รหัสนักศึกษา</label>
                                     <div class="col-lg-10">
-                                        <input type="text" class="form-control" placeholder="ID Student" ng-model="idStudent">
+                                        <input type="text" class="form-control" placeholder="ID Student" ng-model="account.idStudent">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="text" class="col-lg-2 control-label">ชื่อ-นามสกุล</label>
                                     <div class="col-lg-10">
-                                        <input type="text" class="form-control" placeholder="Input Name" ng-model="name">
+                                        <input type="text" class="form-control" placeholder="Input Name" ng-model="account.name">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="text" class="col-lg-2 control-label">วันเดือนปีเกิด</label>
                                     <div class="col-lg-10">
-                                        <input type="text" class="form-control" placeholder="Birthday" ng-model="bDate">
+                                        <input type="text" class="form-control" placeholder="Birthday" ng-model="account.bDate">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="text" class="col-lg-2 control-label">เบอร์โทรศัพท์</label>
                                     <div class="col-lg-10">
-                                        <input type="text" class="form-control" placeholder="Input Telephone Number" ng-model="mobile">
+                                        <input type="text" class="form-control" placeholder="Input Telephone Number" ng-model="account.mobile">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="textArea" class="col-lg-2 control-label">ที่อยู่</label>
                                     <div class="col-lg-10">
-                                        <textarea class="form-control" rows="3" id="textArea" ng-model="address"></textarea>
+                                        <textarea class="form-control" rows="3" id="textArea" ng-model="account.address"></textarea>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <div class="col-lg-10 col-lg-offset-2">
-                                        <button type="submit" class="btn btn-primary" ng-click="save()">Update</button>
+                                        <button type="submit" class="btn btn-primary" ng-click="saveStudent()">Update</button>
                                         <a href="#/student"><button class="btn btn-danger">Cancel</button></a>
                                     </div>
                                 </div>
