--- a/src/main/webapp/advise_add.html
+++ b/src/main/webapp/advise_add.html
@@ -1,5 +1,5 @@
 
-<div class="col-md-10">
+<div class="col-md-11">
     <br>
     <div class="panel panel-default">
         <div class="panel-heading">
@@ -12,7 +12,7 @@
                     <div class="form-group">
                         <label for="text" class="col-lg-2 control-label">อาจารย์</label>
                         <div class="col-lg-10">
-                            <input type="text" class="form-control" ng-model="advise.teacher">
+                            <input type="text" class="form-control" ng-model="advise.teacher.name">
                         </div>
                     </div>
 
