--- a/src/main/webapp/admin_user_show.html
+++ b/src/main/webapp/admin_user_show.html
@@ -1,6 +1,6 @@
 
 <br>
-<div class="col-md-10">
+<div class="col-md-11">
     <ul class="nav nav-pills">
         <li><a href="#/admin_add_information">เพิ่มข่าวประชาสัมพันธ์</a></li>  
         <li><a href="#/courseAdd">เพิ่มวิชาในหลักสูตร</a></li>
@@ -22,8 +22,7 @@
 <br>
 <br>
 
-<div class="col-md-10">
-    <br>
+<div class="col-md-12">
     <br>
     <div class="panel panel-success">
         <div class="panel-heading">
@@ -37,26 +36,26 @@
                     <table class="table table-striped table-hover ">
                         <thead>
                             <tr>
-                                <th>ชื่อผู้ใช้งาน</th>
-                                <th>อีเมล์</th>
-                                <th>รหัสผ่าน</th>
-                                <th>กำหนดสิทธิ์</th>
-                                <th>Edit</th>
-                                <th>Delete</th>
+                                <th  width="25%">ชื่อผู้ใช้งาน</th>
+                                <th  width="25%">อีเมล์</th>
+                                <th  width="15%">รหัสผ่าน</th>
+                                <th  width="15%">กำหนดสิทธิ์</th>
+                                <th  width="10%">Edit</th>
+                                <th  width="10%">Delete</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr ng-repeat="us in usershow.content">
-                                <td>{{us.name}}</td>
-                                <td>{{us.email}}</td>
-                                <td>{{us.password}}</td>
-                                <td>{{us.dtype}}</td>
-                                <td>
+                                <td style="padding:0 20px"  width="25%">{{us.name}}</td>
+                                <td  width="25%">{{us.email}}</td>
+                                <td  width="15%">{{us.password}}</td>
+                                <td  width="15%">{{us.dtype}}</td>
+                                <td  width="10%">
                                     <button ng-click="edit(us)">
                                         <span class="mdi-editor-mode-edit"></span>
                                     </button>
                                 </td>
-                                <td>
+                                <td  width="10%">
                                     <button ng-click="deleteUser(us)">
                                         <span class="mdi-action-delete"></span>
                                     </button>
