--- a/src/main/webapp/advise_add.html
+++ b/src/main/webapp/advise_add.html
@@ -9,79 +9,78 @@
             <p class="list-group-item-text">
             <form class="form-horizontal">
                 <fieldset>
-                    <div class="form-group">
+                    <div class="form-group" ng-hide="checkTeacherLogin()">
                         <label for="text" class="col-lg-2 control-label">อาจารย์</label>
                         <div class="col-lg-10">
-                            <input type="text" class="form-control" ng-model="advise.teacher.name">
+                            <input type="text" class="form-control" ng-model="account.teacher.name">
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label for="text" class="col-lg-2 control-label">นักศึกษา</label>
-                        <div class="col-lg-10">
-                            
-                                <input type="text" class="form-control" ng-model="parentShow.name" data-toggle="modal" data-target="#complete-student">
-                            
+                        <label class="col-lg-2 control-label" ng-show="checkTeacherLogin()"> นักศึกษา</label>
+                                <div class="col-md-10" ng-show="checkTeacherLogin()">
+                                    <input type="text" class="form-control" ng-model="studentShow.name" data-toggle="modal" data-target="#complete-student-advise">
+                                </div>
 
-                            <div id="complete-student" class="modal fade" tabindex="-1">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                            <h4 class="modal-title">เลือกผู้ปกครอง</h4>
-                                        </div>
-                                        <br>
-                                        <div class="modal-body">
-                                            <div class="row">
+                                <div id="complete-student-advise" class="modal fade" tabindex="-1">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                                <h4 class="modal-title">เลือกนักศึกษา</h4>
+                                            </div>
+                                            <br>
+                                            <div class="modal-body">
+                                                <div class="row">
+                                                    <div class="form-group">
+                                                        <label class="col-md-3 control-label">Search</label>
+                                                        <div class="col-md-5">
+                                                            <input type="student" class="form-control" placeholder="Enter Student" ng-model="keyword">
+                                                        </div>
+
+                                                        <div class="col-md-2">
+                                                            <button class="btn btn-info" style="margin-top: -5px" ng-click="studentSearch()">Search</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                                 <div class="form-group">
-                                                    <label class="col-md-3 control-label">Search</label>
-                                                    <div class="col-md-5">
-                                                        <input type="student" class="form-control" placeholder="Enter Student" ng-model="keyword">
-                                                    </div>
-
-                                                    <div class="col-md-2">
-                                                        <button class="btn btn-info" style="margin-top: -5px" ng-click="parentSearch()">Search</button>
+                                                    <table class="table table-striped table-hover ">
+                                                        <thead>
+                                                            <tr>
+                                                                <th>ชื่อ</th>
+                                                                <th>อีเมล์</th>
+                                                                <th>เลือก</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            <tr ng-repeat="stu in student.content">
+                                                                <td>{{stu.name}}</td>
+                                                                <td>{{stu.email}}</td>
+                                                                <td><a ng-click="selectStudent(stu)" data-dismiss="modal">เลือก</a></td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="right">
+                                                        <ul class="pagination pagination-sm">
+                                                            <li id="first-page"><a ng-click="firstPage()">&Lt;</a></li>
+                                                            <li id="pre-page" ><a ng-click="prePage()">&lt;</a></li>
+                                                            <li><a>{{currentPage + 1}}</a></li>
+                                                            <li id="next-page"><a ng-click="nextPage()">&gt;</a></li>
+                                                            <li id="final-page"><a ng-click="finalPage()">&gg;</a></li>
+                                                        </ul>
                                                     </div>
                                                 </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <table class="table table-striped table-hover ">
-                                                    <thead>
-                                                        <tr>
-                                                            <th>ชื่อ</th>
-                                                            <th>อีเมล์</th>
-                                                            <th>เลือก</th>
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                        <tr ng-repeat="students in student.content">
-                                                            <td>{{students.name}}</td>
-                                                            <td><a ng-click="selectStudent(students)" data-dismiss="modal">เลือก</a></td>
-                                                        </tr>
-                                                    </tbody>
-                                                </table>
-                                            </div>
-                                            <div class="row">
-                                                <div class="right">
-                                                    <ul class="pagination pagination-sm">
-                                                        <li id="first-page"><a ng-click="firstPage()">&Lt;</a></li>
-                                                        <li id="pre-page" ><a ng-click="prePage()">&lt;</a></li>
-                                                        <li><a>{{currentPage + 1}}</a></li>
-                                                        <li id="next-page"><a ng-click="nextPage()">&gt;</a></li>
-                                                        <li id="final-page"><a ng-click="finalPage()">&gg;</a></li>
-                                                    </ul>
+                                                <div class="modal-footer">
+                                                    <button class="btn btn-danger" data-dismiss="modal">Exit</button>
                                                 </div>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button class="btn btn-danger" data-dismiss="modal">Exit</button>
-                                            </div>
 
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                            </div>
+                                </div>     
                         </div>
-                    </div>
 
                     <div class="form-group">
                         <label for="text" class="col-lg-2 control-label">วันที่-เวลา</label>
@@ -147,7 +146,7 @@
                 </thead>
                 <tbody>
                     <tr ng-repeat="ad in adviseshow.content">
-                        <td>{{}}</td>
+                        <td>{{ad.student.name}}</td>
                         <td>{{ad.dates}}</td>
                         <td>{{ad.categoryAdvise.nameCategory}}</td>
                         <td>{{ad.title}}</td>
