--- a/src/main/webapp/appointmentAdd.html
+++ b/src/main/webapp/appointmentAdd.html
@@ -1,5 +1,5 @@
-
-<div class="col-md-10">
+<br>
+<div class="col-md-12">
 
     <div class="panel panel-primary">
         <div class="panel-heading">Calendar</div>
@@ -15,82 +15,77 @@
             </div>
         </div>
     </div>
-    <h1 class="page-header">การนัดหมาย</h1>
-    <button type="button" class="btn btn-success">
-        <span class="glyphicon glyphicon-search"></span>ดูวันเวลาว่างของอาจารย์
-    </button>
-    <br>
-    <br>
-    <div>
-        <form class="form-horizontal" role="form">
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="email">ชื่อผู้นัดหมาย : </label>
-                <div class="col-sm-10">
-                    <input type="text" style="width:500px;" placeholder="ชื่อ...">
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="email">ถึงผู้นัดหมาย : </label>
-                <div class="col-sm-10">
-                    <input type="text" style="width:500px;" placeholder="ถึง...">
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="email">หัวข้อเรื่อง : </label>
-                <div class="col-sm-10">
-                    <input type="text" style="width:500px;" placeholder="เรื่อง...">
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="email">สถานที่ : </label>
-                <div class="col-sm-10">
-                    <input type="text" style="width:500px;" placeholder="สถานที่...">
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="email">วัน/เดือน/ปี : </label>
-                <div class="col-sm-10">
-                    <input type="text" name="dateInput" id="dateInput" value="" /> 
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="email">เวลา : </label>
-                <div class="col-sm-10">
-                    <input type="text" placeholder="เวลา...">
-                </div>
-            </div>
 
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="email">สถานะ : </label>
-                <div class="col-sm-10">
-                    <input type="text" placeholder="เวลา...">
+
+    <div class="panel panel-primary">
+        <div class="panel-heading">นัดหมาย</div>
+        <div class="panel-body">
+            <div>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-md-11">
+                            <form class="form-horizontal">
+                                <div class="form-group">
+                                    <label class="control-label col-lg-3 control-label">ชื่อผู้นัดหมาย :</label>
+                                    <div class="col-lg-9">
+                                        <input type="text" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label col-lg-3 control-label">ถึงผู้นัดหมาย :</label>
+                                    <div class="col-lg-9">
+                                        <input type="text" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label col-lg-3 control-label">หัวข้อเรื่อง :</label>
+                                    <div class="col-lg-9">
+                                        <input type="text" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label col-lg-3 control-label">สถานที่ : </label>
+                                    <div class="col-lg-9">
+                                        <input type="text" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label col-lg-3 control-label">วัน/เดือน/ปี : </label>
+                                    <div class="col-lg-9">
+                                        <input type="text" class="form-control" > 
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label col-lg-3 control-label">เวลา : </label>
+                                    <div class="col-lg-9">
+                                        <input type="text" class="form-control">
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <label class="control-label col-lg-3 control-label">สถานะ : </label>
+                                    <div class="col-lg-9 ">
+                                        <input type="text" class="form-control">
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="text" class="col-lg-3 control-label">รายละเอียดการนัดหมาย</label>
+                                    <div class="col-lg-9">
+                                        <textarea class="form-control" rows="3" id="textArea"></textarea>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <center>
+                                        <button class="btn btn-success">Save</button>
+                                        <a href="#/appointment"><button class="btn btn-danger">Cancle</button></a>
+                                    </center>
+                                </div>
+                            </form> 
+                        </div>
+                    </div>
                 </div>
             </div>
-
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="comment">รายละเอียด : </label>
-                <div class="col-sm-10">
-                    <textarea type="text" style="width:500px;" rows="5" id="comment"></textarea>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label for="inputFile" class="col-lg-2 control-label">File</label>
-                <div class="col-lg-10">
-                    <input type="text" id="input-file" readonly="" class="form-control floating-label" placeholder="Browse...">
-                    <input type="file" id="input-file"> 
-                </div>
-            </div>
-
-            <div class="form-group">
-                <center>
-                    <button class="btn btn-success">Save</button>
-                    <a href="#/appointment"><button class="btn btn-danger">Cancle</button></a>
-                </center>
-            </div>
-        </form> 
+        </div>
     </div>
 </div>
-<script>
-    $.material.init();
-</script>
