add date locale TH

--- a/src/main/webapp/index-template.html
+++ b/src/main/webapp/index-template.html
@@ -44,6 +44,7 @@
         <script src="js/app/student_show.js"></script>
         <script src="js/app/timetable.js"></script>
         <script src="js/app/checklist-model.js"></script>
+        <script src="node_modules/moment/moment.js"></script>
         
         <style>
             body{
