resolved merge conflict

--- a/src/main/webapp/advise_show.html
+++ b/src/main/webapp/advise_show.html
@@ -8,8 +8,8 @@
         <div class="panel-body">
             <div class="form-group">
                 <label class="col-md-3 control-label">Search</label>
-                <div class="col-md-4" ng-model="keyword">
-                    <select type="status" class="form-control" ng-click="adviseSearch()">
+                <div class="col-md-4">
+                    <select type="status" class="form-control">
                         <option value="Admin">หมวดวิชาการ</option>
                         <option value="Teacher">หมวดกิจกรรม</option>
                         <option value="Student">หมวดทั่วไป</option>
