--- a/src/main/webapp/admin_user_show.html
+++ b/src/main/webapp/admin_user_show.html
@@ -1,6 +1,6 @@
 
 <br>
-<div class="col-md-11">
+<div class="col-md-12">
     <ul class="nav nav-pills">
         <li><a href="#/admin_add_information">เพิ่มข่าวประชาสัมพันธ์</a></li>  
         <li><a href="#/courseAdd">เพิ่มวิชาในหลักสูตร</a></li>
@@ -18,63 +18,80 @@
             </ul>
         </li>
     </ul>
-</div>
-<br>
-<br>
 
-<div class="col-md-12">
     <br>
-    <div class="panel panel-success">
-        <div class="panel-heading">
-            <h3 class="panel-title">ผู้ใช้งานในระบบทั้งหมด</h3>
+    <div class="col-md-6">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <label class="panel-title">ค้นหาชื่อ หรือ email:</label>
+            </div>
+            <div class="panel-body" style="height: 70px">
+                <div class="row">
+                    <div class="form-group">
+                        <label class="col-md-3">Search</label>
+                        <div class="col-md-6">
+                            <input type="text" class="form-control col-md-3" ng-model="keyword"></span>
+                        </div>
+                        <button class="btn btn-default" ng-click="searchUser(keyword)">
+                            <span class="mdi-action-search"></span>
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="panel-body">
-            <div class="row">
+    </div>
+    <div class="col-md-12">
+        <div class="panel panel-success">
+            <div class="panel-heading">
+                <h3 class="panel-title">ผู้ใช้งานในระบบทั้งหมด</h3>
+            </div>
+            <div class="panel-body">
+                <div class="row">
 
-                <div class="form-group">
+                    <div class="form-group">
 
-                    <table class="table table-striped table-hover ">
-                        <thead>
-                            <tr>
-                                <th  width="25%">ชื่อผู้ใช้งาน</th>
-                                <th  width="25%">อีเมล์</th>
-                                <th  width="15%">รหัสผ่าน</th>
-                                <th  width="15%">กำหนดสิทธิ์</th>
-                                <th  width="10%">Edit</th>
-                                <th  width="10%">Delete</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr ng-repeat="us in usershow.content">
-                                <td style="padding:0 20px"  width="25%">{{us.name}}</td>
-                                <td  width="25%">{{us.email}}</td>
-                                <td  width="15%">{{us.password}}</td>
-                                <td  width="15%">{{us.dtype}}</td>
-                                <td  width="10%">
-                                    <button ng-click="edit(us)">
-                                        <span class="mdi-editor-mode-edit"></span>
-                                    </button>
-                                </td>
-                                <td  width="10%">
-                                    <button ng-click="deleteUser(us)">
-                                        <span class="mdi-action-delete"></span>
-                                    </button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                        <table class="table table-striped table-hover ">
+                            <thead>
+                                <tr>
+                                    <th  width="25%">ชื่อผู้ใช้งาน</th>
+                                    <th  width="25%">อีเมล์</th>
+                                    <th  width="15%">รหัสผ่าน</th>
+                                    <th  width="15%">กำหนดสิทธิ์</th>
+                                    <th  width="10%">Edit</th>
+                                    <th  width="10%">Delete</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr ng-repeat="us in usershow.content">
+                                    <td style="padding:0 20px"  width="25%">{{us.name}}</td>
+                                    <td  width="25%">{{us.email}}</td>
+                                    <td  width="15%">{{us.password}}</td>
+                                    <td  width="15%">{{us.dtype}}</td>
+                                    <td  width="10%">
+                                        <button ng-click="edit(us)">
+                                            <span class="mdi-editor-mode-edit"></span>
+                                        </button>
+                                    </td>
+                                    <td  width="10%">
+                                        <button ng-click="deleteUser(us)">
+                                            <span class="mdi-action-delete"></span>
+                                        </button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
                 </div>
 
             </div>
+            <div class="progress progress-striped">
+                <div class="progress-bar progress-bar-success" style="width: 100%"></div>
+            </div>
 
         </div>
-        <div class="progress progress-striped">
-            <div class="progress-bar progress-bar-success" style="width: 100%"></div>
-        </div>
-
     </div>
-
-
+</div>
 
 
 
